# frugal

./: .gitignore  APPLICATION.md  BUSINESS_CASE.md  CHANGELOG.md  CONTRIBUTING.md  ENTERPRISE.md  ENTERPRISE.ru.md  LAUNCH_POSTS.md  LAUNCH_STRATEGY.md  LICENSE  LINKEDIN.md  METHODOLOGY.md  README.md  README.ru.md  WEAKNESSES.md  awesome-onprem-ai.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench_gpu/: cleanup_verify.sh  gpu_latency.py  gpu_run.sh  start_ollama_gpu.sh  stop_mining.sh
benchmarks/: RESULTS.md  RESULTS_BROAD.md  RESULTS_CLUSTER.md  RESULTS_CLUSTER_carlito4.md  RESULTS_LITELLM.md  RESULTS_MODELS.md  RESULTS_MODELS_HARD.md  RESULTS_MULTINODE.md  SWARM_DEBATE.md  SWARM_OPINIONS.md  bench_broad.py  bench_cluster.py  bench_models.py  bench_multinode.py  compare_litellm.py  compare_litellm_live.py  cost_model.py  data.py  data_broad.py  data_hard.py  dev_swarm.py  dev_swarm2.py  run_all.py  stress_deep.py  stress_test.py
docs/: CLUSTER.md  FAQ.md  FAQ.ru.md  TUTORIAL.md  TUTORIAL.ru.md
examples/: demo.cast  live_cost_demo.py  quickstart.py  rag_example.json
examples/scenarios/: scenario_batch_job.py  scenario_cache_savings.py  scenario_ci_eval.py  scenario_coding_agent.py  (+4 more)
rules/: AGENTS.md
site/: banner.html  deck.html  index.html  x-card.html
tests/: test_cache_reserve.py  test_config.py  test_diagnose.py  test_economics.py  test_eval.py  test_fuzz.py  test_gateway.py  test_gateway_fastapi.py  test_mcp.py  test_meter.py  test_rag.py  test_roadmap.py  test_robustness.py  test_route.py
(+32 files in other folders)
